# Crossapp-Microbet

./: .gitignore  README.md  app_ids.txt  apps.md  deploy.sh
leaderboard/: Cargo.toml
leaderboard/src/: contract.rs  lib.rs  service.rs  state.rs
lottery-app/: Cargo.toml
lottery-app/src/: contract.rs  lib.rs  service.rs  state.rs
lottery-rounds/: Cargo.toml
lottery-rounds/src/: contract.rs  lib.rs  service.rs  state.rs
microbetreal/: Cargo.toml
microbetreal/src/: contract.rs  lib.rs  service.rs  state.rs
native-fungible-abi/: Cargo.toml
native-fungible-abi/src/: lib.rs
native/src/: contract.rs
rounds/: Cargo.toml
rounds/src/: contract.rs  lib.rs  service.rs  state.rs
