[package]
name = "lottery-app"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.17", default-features = false }
futures = "0.3.30"
linera-sdk = "0.15.7"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
native-fungible-abi = { path = "../native-fungible-abi" }
lottery-rounds = { path = "../lottery-rounds" } # For ABI types

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "lottery_app_contract"
path = "src/contract.rs"

[[bin]]
name = "lottery_app_service"
path = "src/service.rs"
